syntax = "proto3";
package models;
option go_package = "./models";

message TransactionWebsocket {

  string from_address = 1;
  string to_address = 2;
  string value = 3;
  uint64 step_limit = 4;
  uint64 block_timestamp = 5;
  string nonce = 6;
  string hash = 7;
  uint32 transaction_index = 8;
  string block_hash = 9;
  uint64 block_number = 10;
  uint64 fee = 11;
  string signature = 12;
  string data_type = 13;
  string data = 14;
  uint64 receipt_cumulative_step_used = 15;
  uint64 receipt_step_used = 16;
  uint64 receipt_step_price = 17;
  string receipt_score_address = 18;
  string receipt_logs = 19;
  uint32 receipt_status = 20;
}
